--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <header class="main-header">
     <div class="container">
-      <div class="logo"><a href="/">FLIXX</a></div>
+      <div class="logo"><a href="/">Flicks</a></div>
       <nav>
         <ul>
           <li>
@@ -73,7 +73,7 @@
   <!-- Footer -->
   <footer class="main-footer">
     <div class="container">
-      <div class="logo"><span>FLIXX</span></div>
+      <div class="logo"><span>Flicks</span></div>
       <div class="social-links">
         <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
         <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
